# sqlmodel-demo

./: pyproject.toml
heroes/: database.py  main.py
heroes/hero/: hero_models.py  hero_operations.py  hero_routes.py  hero_schemas.py
heroes/tests/: conftest.py  hero_test.py
