[tool.poetry]
name = "documentdatabase"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.12"
pydantic = {extras = ["email"], version = "^2.7.0"}
sqlalchemy = "^2.0.29"
pandas = "^2.2.2"
pyjwt = "^2.8.0"
fastapi = "^0.110.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
ruff = "^0.3.6"
sqlalchemy-stubs = "^0.4"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
alembic = "^1.13.1"
sqlmodel = "^0.0.16"
pytest = "^8.1.1"
httpx = "^0.27.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
